--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 matplotlib==1.5.3
 numpy==1.11.3
+pandas==0.19.2
 scikit-learn==0.18.1
 scipy==0.18.1
-six==1.10.0
-tensorflow==0.12.0
-tornado
+seaborn==0.7.1
+tensorflow-gpu==1.0.0
+tornado==4.4.2
+xgboost==0.6a2
