--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ pandas==0.19.2
 scikit-learn==0.18.1
 scipy==0.18.1
 seaborn==0.7.1
-tensorflow-gpu==1.0.0
+tensorflow==1.0.0
 tornado==4.4.2
 xgboost==0.6a2
