--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+ipython==5.3.0
 ipyparallel==6.0.2
-jupyter-kernel-gateway==1.2.0
+jupyter-kernel-gateway==1.2.1
 Keras==2.0.3
 matplotlib==1.5.3
 networkx==1.11
